--- a/index.html
+++ b/index.html
@@ -15,10 +15,24 @@
 </head>
 
 <body>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/66ae17e932dca6db2cb9951c/1i4c0qqvn';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+
   <!-- header design -->
   <header class="header">
 
-    <a href="#" class="logo">AstroDude</a>
+    <a href="#" class="logo">Astro<span>Dude</span></a>
 
     <i class="bx bx-menu" id="menu-icon"></i>
 
@@ -26,7 +40,7 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#projects">projects</a>
       <a href="#contact">Contact</a>
     </nav>
 
@@ -132,14 +146,14 @@
     </div>
   </section>
 
-  <!-- portfolio section design -->
-  <section class="portfolio" id="portfolio">
+  <!-- projects section design -->
+  <section class="projects" id="Projects">
     <h2 class="heading">Latest <span>projects</span></h2>
 
-    <div class="portfolio-container">
-      <div class="portfolio-box">
+    <div class="projects-container">
+      <div class="projects-box">
         <img src="isro.png" alt="">
-        <div class="portfolio-layer">
+        <div class="projects-layer">
           <h4>ISRO Management System</h4>
           <p>GUI built using python and MySQL.</p>
           <a href="https://github.com/AstroDude28/ISRO-Management-System" target="_blank" rel="noopener noreferrer"><i
@@ -147,9 +161,9 @@
         </div>
       </div>
 
-      <div class="portfolio-box">
+      <div class="projects-box">
         <img src="paradoxes.png" alt="">
-        <div class="portfolio-layer">
+        <div class="projects-layer">
           <h4>Paradoxes: The Art of Contradictions</h4>
           <p>
             I wrote this book to explain few most famous paradoxes.
@@ -159,21 +173,21 @@
         </div>
       </div>
 
-      <div class="portfolio-box">
+      <div class="projects-box">
         <img src="website.png" alt="">
-        <div class="portfolio-layer">
-          <h4>Portfolio website</h4>
+        <div class="projects-layer">
+          <h4>projects website</h4>
           <p>
-            I built my own portfolio website.
+            I built my own projects website.
           </p>
           <a href="https://github.com/AstroDude28/astrodude" target="_blank" rel="noopener noreferrer"><i
               class="bx bx-link-external"></i></a>
         </div>
       </div>
 
-      <div class="portfolio-box">
+      <div class="projects-box">
         <img src="drone.png" alt="">
-        <div class="portfolio-layer">
+        <div class="projects-layer">
           <h4>Drone</h4>
           <p>
             I with 2 of my friends built a drone for our school exhibition.
@@ -183,9 +197,9 @@
         </div>
       </div>
 
-      <div class="portfolio-box">
+      <div class="projects-box">
         <img src="solar.png" alt="">
-        <div class="portfolio-layer">
+        <div class="projects-layer">
           <h4>Heliotropic Payload</h4>
           <p>
             I with 2 of my friends built a solar tracking system and got selected in top 15 in national level.
